test/spectrum/examples/bad/static_add.clj
(ns checker.bad.static-add)

(defn foo []
  (+ 1 "bogus"))
